--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
     </div>
 
     <div id="images1">
-        <a href="https://www.youtube.com/channel/UC2p5QR-WVJnFfaUKLzkQIVw"><img id="curly_j" src="images/curly_j.png"></a>
-        <a href="https://www.youtube.com/channel/UChlOsnwkarBH-srYGJnh46w"><img id="dc" src="images/dc_the_don2.jpg"></a>
+        <a href="curly_j/index.html"><img id="curly_j" src="images/curly_j.png"></a>
+        <a href="dc_the_don/index.html"><img id="dc" src="images/dc_the_don2.jpg"></a>
     </div>
 
     <div id="images2">
-        <a href="https://www.youtube.com/channel/UCS0Rj2tQyWO18Qa3pVUKiTw/videos"><img id="xxel" src="images/lil_xxel.jpg"></a>
-        <a href=""><img id="kel" src="images/luh_kel.jpg"></a>
+        <a href="lil_xxel/index.html"><img id="xxel" src="images/lil_xxel.jpg"></a>
+        <a href="luh_kel/index.html"><img id="kel" src="images/luh_kel.jpg"></a>
     </div>
 
     <div id="images3">
-        <a href=""><img id="melii" src="images/melii.jpg"></a>
-        <a href=""><img id="scorey" src="images/scorey2.jpg"></a>
+        <a href="melii/index.html"><img id="melii" src="images/melii.jpg"></a>
+        <a href="scorey/index.html"><img id="scorey" src="images/scorey2.jpg"></a>
     </div>
 
     <div id="images4">
