--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
 
     <div id="images4">
-        <a href=""><img id="szn" src="images/Thekidszn.jpg"></a>
-        <a href=""><img id="ynw" src="images/bslime.jpg"></a>
+        <a href="thekidszn/index.html"><img id="szn" src="images/Thekidszn.jpg"></a>
+        <a href="ynw_bslime/index.html"><img id="ynw" src="images/bslime.jpg"></a>
     </div>
 
     <div id="images5">
