--- a/lil_xxel/index.html
+++ b/lil_xxel/index.html
@@ -19,11 +19,9 @@
 
     <div id="info_container">
 
-        <div id="info">
-
-        </div>
-
+        <div id="info"> </div>
         <img id=xxel_img src="images/lil_xxel.jpg">
+        
     </div>
 
     <p>
