--- a/luh_kel/index.html
+++ b/luh_kel/index.html
@@ -19,11 +19,9 @@
 
     <div id="info_container">
 
-        <div id="info">
-
-        </div>
-
+        <div id="info"> </div>
         <img id=kel_img src="images/luh_kel.jpg">
+        
     </div>
 
     <p>
