--- a/melii/index.html
+++ b/melii/index.html
@@ -19,11 +19,9 @@
 
     <div id="info_container">
 
-        <div id="info">
-
-        </div>
-
+        <div id="info"> </div>
         <img id=melii_img src="images/melii.jpg">
+        
     </div>
 
     <p>
