--- a/ynw_bslime/index.html
+++ b/ynw_bslime/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DC The Don - Darius' Freshmen '21</title>
+    <title>YNW BSlime - Darius' Freshmen '21</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -15,13 +15,13 @@
         <a href="#"><div class="items">About Me</div></a>
     </div>
 
-    <h1>DC The Don</h1>
+    <h1>YNW BSlime</h1>
 
     <div id="info_container">
 
         <div id="info"> </div>
-        <img id=dc_img src="images/dc_the_don2.jpg">
-        
+        <img  id="ynw_img" src="images/bslime.jpg">
+       
     </div>
 
     <p>
