--- a/curly_j/index.html
+++ b/curly_j/index.html
@@ -19,11 +19,9 @@
 
     <div id="info_container">
 
-        <div id="info">
-
-        </div>
-
+        <div id="info"> </div>
         <img id=curly_j_img src="images/curly_j.png">
+
     </div>
 
     <p>
