--- a/scorey/index.html
+++ b/scorey/index.html
@@ -19,10 +19,7 @@
 
     <div id="info_container">
 
-        <div id="info">
-
-        </div>
-
+        <div id="info"> </div>
         <img id=scorey_img src="images/scorey2.jpg">
     </div>
 
