--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </div>
 
     <div id="images5">
-        <a href=""><img id="devyn" src="images/young_devyn.jpg"></a>
-        <a href=""><img id="ysn" src="images/ysn_flow.jpg"></a>
+        <a href="young_devyn/index.html"><img id="devyn" src="images/young_devyn.jpg"></a>
+        <a href="ysn_flow/index.html"><img id="ysn" src="images/ysn_flow.jpg"></a>
     </div>
     
 </body>
