--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
 
         <p>
-            For starters, I'm the only one who has influence in who makes the list, hence MY name being in the title. That being said, if YOUR favorite artist isn't on the list, you can't say I'm wrong because it is MY opinion. Also, the level of popularity of these artists is lower than that of artists XXL would pick. None of these artists (except for Luh Kel) have gold or platinum plaques and none of them have more than 3 million spotify monthly listeners as of July 29, 2021. Therefore, if you feel out of touch because you don't know anybody on this list, don't worry. The whole reason of this is for me to familiarize you with these criminally underrated MC's and hopefully gain them a few more fans.
+            For starters, I'm the only one who has influence in who makes the list, hence MY name being in the title. That being said, if YOUR favorite artist isn't on the list, you can't say I'm wrong because it is MY opinion. Also, the level of popularity of these artists is lower than that of artists XXL would pick. None of these artists have ever had a song on Billboard Hot 100, none of them have more than 3 million spotify monthly listeners as of July 29, 2021, and only one of them has a gold or platinum plaque to their name. Therefore, if you feel out of touch because you don't know anybody on this list, don't worry. The whole reason of this is for me to familiarize you with these criminally underrated MC's and hopefully gain them a few more fans.
         </p>
 
         <p>With that being said, I present to you the members of Darius' Inaugural 2021 Freshman Class (from left to right, top to bottom), Curly J, DC The Don, Lil Xxel, Luh Kel, Melii, Scorey, TheKidSzn, YNW BSlime, Young Devyn, and YSN Flow!</p>
